fix logic bugs and refactor